--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -56,7 +56,7 @@
     "height_2014 <- height_2014 %>% rename(PLAYER_NAME = Name)\n",
     "\n",
     "\n",
-    "typos <- list(\n",
+    "typos <- c(\n",
     "    \"Time Hardaway Jr\" = \"Tim Hardaway Jr\",\n",
     "    \"Steve Adams\" = \"Steven Adams\",\n",
     "    \"Jose Juan Barea\" = \"Jj Barea\",\n",
@@ -64,19 +64,14 @@
     "    \"Charles Hayes\" = \"Chuck Hayes\", # technically correct but more sources with chuck\n",
     "    \"Ishmael Smith\" = \"Ish Smith\", # as above\n",
     "    \"Patrick Mills\" = \"Patty Mills\", # etc\n",
-    "    \"Na Nene\" = \"Nene\"\n",
+    "    \"Na Nene\" = \"Nene\",\n",
+    "    \"Jose Barea\" = \"Jj Barea\"\n",
     ")\n",
     "\n",
     "replace_strings <- function(df, replacements) {\n",
-    "  # Loop through the replacements\n",
-    "  df %>%\n",
-    "    mutate(across(where(is.character), ~{\n",
-    "      for (pattern in names(replacements)) {\n",
-    "        # Apply only the specific replacements, avoiding duplicate replacement\n",
-    "        . <- str_replace_all(., pattern, replacements[[pattern]])\n",
-    "      }\n",
-    "      .\n",
-    "    }))\n",
+    "    replacements <- unlist(replacements, use.names = TRUE)\n",
+    "\n",
+    "    df %>% mutate(across(where(is.character), ~ str_replace_all(., replacements)))\n",
     "}\n",
     "\n",
     "\n",
@@ -89,8 +84,6 @@
     "    str_to_title()\n",
     "}\n",
     "\n",
-    "\n",
-    "\n",
     "player_info <- player_info %>%\n",
     "    mutate(PLAYER_NAME = clean_name(PLAYER_NAME))\n",
     "\n",
@@ -99,11 +92,9 @@
     "    mutate(PLAYER_NAME = clean_name(PLAYER_NAME),\n",
     "          CLOSEST_DEFENDER = clean_name(CLOSEST_DEFENDER))\n",
     "\n",
-    "# shortcut usig slug col\n",
     "common_player_info <- common_player_info %>%\n",
-    "    mutate(PLAYER_NAME = player_slug) %>%\n",
-    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \")) %>%\n",
-    "    mutate(PLAYER_NAME = str_to_title(PLAYER_NAME))\n",
+    "    mutate(PLAYER_NAME = clean_name(PLAYER_NAME)) %>%\n",
+    "    filter(person_id != 779) # filtering out glen rice sr. by hand\n",
     "\n",
     "height_2014 <- height_2014 %>%\n",
     "    mutate(PLAYER_NAME = clean_name(PLAYER_NAME))\n",
@@ -115,14 +106,7 @@
     "height_2014 <- replace_strings(height_2014, typos)\n",
     "\n",
     "# Explicit case because of his name and interactions with the regex\n",
-    "player_info <- player_info %>% mutate(across(where(is.character), ~ str_replace_all(., \"Luc Mbah\", \"Luc Mbah A Moute\")))\n",
-    "\n",
-    "# More explictit cases (for now)\n",
-    "height_2014 <- height_2014 %>% mutate(across(where(is.character), ~ str_replace_all(., \"Jose Barea\", \"Jj Barea\")))\n",
-    "\n",
-    "# In common_player_info there is a duplicate row for glen rice, and the younger is not called jr... So by hand,\n",
-    "\n",
-    "common_player_info <- common_player_info %>% filter(person_id != 779)"
+    "player_info <- player_info %>% mutate(across(where(is.character), ~ str_replace_all(., \"Luc Mbah\", \"Luc Mbah A Moute\")))"
    ]
   },
   {
@@ -139,7 +123,8 @@
     "colnames(clean_shots)\n",
     "colnames(player_info)\n",
     "colnames(player_salary)\n",
-    "colnames(height_2014)"
+    "colnames(height_2014)\n",
+    "colnames(common_player_info)"
    ]
   },
   {
