--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -306,7 +306,7 @@
    "outputs": [],
    "source": [
     "predictors <- c(\"GAME_ID\", \"PLAYER_NAME\", \"CLOSEST_DEFENDER\" ,\"SHOT_DIST\", \"PTS_TYPE\",\n",
-    "                \"CLOSE_DEF_DIST\", \"SHOT_CLOCK\", \"TOUCH_TIME\", \"PERIOD\", \"DRIBBLES\",\n",
+    "                \"CLOSE_DEF_DIST\", \"SHOT_CLOCK\", \"TOUCH_TIME\", \"PERIOD\", \"DRIBBLES\", \"SEC_REMAIN\",\n",
     "                \"SUCCESS\")\n",
     "\n",
     "# Join in height information one dataset at a time. \n",
@@ -431,7 +431,7 @@
     "# If you do add PTS_TYPE, it will show PTS_TYPE3 as being a significant effect, and say nothing about PTS_TYPE2. \n",
     "# This is because 2 is chosen as the baseline for the model. Instead we deal with this afterwards\n",
     "\n",
-    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + DRIBBLES,  \n",
+    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + DRIBBLES + SEC_REMAIN,  \n",
     "                 data=train_data, family=binomial(link=\"logit\"))\n",
     "\n",
     "# Mixed model tries to account for variance between games and players. Doesn't come to very much variance it turns out.\n",
@@ -447,7 +447,7 @@
     "x_train <- model.matrix(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + \n",
     "                        SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK, data = train_data)[, -1]\n",
     "y_train <- train_data$SUCCESS\n",
-    "cv.out <- cv.glmnet(x_train, y_train, family = \"binomial\", alpha = 1, type.measure = \"auc\", nfolds=10)\n",
+    "cv.out <- cv.glmnet(x_train, y_train, family = \"binomial\", alpha = 1, type.measure = \"auc\", nfolds=3)\n",
     "plot(cv.out)\n",
     "lambda_opt <- cv.out$lambda.1se\n",
     "\n",
@@ -491,15 +491,14 @@
     "model_data_super_2pt <- model_data_super %>% filter(PTS_TYPE == 2)\n",
     "model_data_super_3pt <- model_data_super %>% filter(PTS_TYPE == 3)\n",
     "\n",
+    "colnames(model_data_2pt)\n",
+    "\n",
     "# Repetitive but only to make sure the models are correct. A more concise syntax can be used if I filtered the data to only have the predictor cols.\n",
     "\n",
     "log_model_2pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV  + DRIBBLES + SHOT_CLOCK, \n",
     "                     data = model_data_2pt, family = binomial(link = \"logit\"))\n",
     "log_model_3pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + DRIBBLES + SHOT_CLOCK, \n",
     "                     data = model_data_3pt, family = binomial(link = \"logit\"))\n",
-    "#log_model_super <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
-    "#                     data = model_data_super, family = binomial(link = \"logit\"))\n",
-    "\n",
     "log_model_super_2pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + DRIBBLES + SHOT_CLOCK, \n",
     "                     data = model_data_super_2pt, family = binomial(link = \"logit\"))\n",
     "log_model_super_3pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + DRIBBLES + SHOT_CLOCK, \n",
@@ -542,7 +541,7 @@
     "  ) +\n",
     "  labs(\n",
     "    title  = \"Model Coefficients\",\n",
-    "    x      = \"Log-Odds Estimate\",\n",
+    "    x      = \"Coefficient estimate\",\n",
     "    y      = NULL,\n",
     "    colour = \"Model\",\n",
     "    shape  = \"Significance\"\n",
@@ -747,6 +746,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5a32261b-3a4d-4d1c-97b4-0f978b9ed7c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colnames(clean_shots)\n",
+    "clean_shots %>% filter(PTS_TYPE == 3) %>% \n",
+    "    group_by(PLAYER_NAME, HOME_TEAM) %>% \n",
+    "    summarise(success_3s = sum(SUCCESS), .groups=\"drop\") %>% \n",
+    "    arrange(desc(success_3s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53d2efd0-5c01-4241-ac2e-5b46794337da",
    "metadata": {},
    "outputs": [],
    "source": []
